# ocr_app

./: README.md
ocr_app/: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE  docker-compose.yml  sample_spec.docx
ocr_app/models/: text-detection-checkpoint-03.23.recall_92.precis_85.rten
ocr_app/src/: labels.rs  lib.rs  main.rs  models.rs  ocr.rs
ocr_app/static/: styles.css
ocr_app/templates/: comparison.html  index.html
