[package]
name = "ocr_app"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.21"
ocrs = "0.10.0"
rten = "0.16.0"
rten-tensor = "0.16.0"
rten-imageproc = "0.16.0"
image = "0.24.7"
lexopt = "0.3.0"
mupdf = "0.4.4"
temp-dir = "0.1.11"
anyhow = "1.0"

# Web server dependencies
axum = { version = "0.7", features = ["multipart"] }
tokio = { version = "1.0", features = ["full"] }
tower-http = { version = "0.5", features = ["fs"] }
tempfile = "3.9.0"
